src/test/deca/syntax/invalid/provided/chaine_incomplete.deca
// Description:
//     Programme lexicalement incorrect
//     => chaîne non terminée
//
// Resultats:
//      ligne 8 : Erreur, chaine non terminee (sur fin de fichier)

"chaine pas finie
